# arduino-uno-rust-avr-hal

./: README.md  atmega328p.svd.patched
hello-arduino-embassy/: Cargo.toml  README.md  Ravedude.toml
hello-arduino-embassy/src/: main.rs
hello-arduino-hal/: Cargo.toml
hello-atmega-hal/: Cargo.toml
hello-atmega-hal/src/: main.rs
hello-avr-device/: Cargo.toml  Ravedude.toml
hello-avr-device/src/: main.rs
hello-gpio/: Cargo.toml
patch/: README.md  atmega328p.yaml
