[package]
name = "hello-arduino-embassy"
version = "0.1.0"
authors = ["wuhanstudio <wuhanstudios@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
panic-halt = "1.0.0"
embedded-hal = "1.0"

ufmt = "0.2.0"
embassy-time = "0.5.0"
embassy-executor = { version = "0.9.1", features = ["arch-avr", "executor-thread"]}

avr-device = { version = "0.7.0", features = ["atmega328p", "rt", "critical-section-impl"]}

[dependencies.atmega-hal]
git = "https://github.com/rahix/avr-hal"
rev = "fafaf587a32a4500239fd073f89d1b9c36b48092"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "fafaf587a32a4500239fd073f89d1b9c36b48092"
features = ["arduino-uno"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
