[package]
name = "hello-atmega-hal"
version = "0.1.0"
edition = "2024"

[dependencies]
avr-device = { version = "0.7.0"}
avr-hal-generic = { git = "https://github.com/Rahix/avr-hal/" }
atmega-hal = { git = "https://github.com/Rahix/avr-hal/", features = ["atmega328p", "rt"] }

embedded-hal = "1.0"

[dependencies.embedded-hal-v0]
version = "0.2.3"
package = "embedded-hal"
features = ["unproven"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
