[package]
name = "hello-atmega-hal"
version = "0.1.0"
edition = "2024"

[dependencies]
avr-device = { version = "0.7.0"}
avr-hal-generic = { git = "https://github.com/Rahix/avr-hal/" }
atmega-hal = { git = "https://github.com/Rahix/avr-hal/", features = ["atmega328p", "rt"] }

embedded-hal = "1.0"

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"
debug = true

[profile.release]
panic = "abort"
lto = true
opt-level = "s"
codegen-units = 1
