[package]
name = "hello-avr-device"
version = "0.1.0"
edition = "2024"

[dependencies]
avr-device = { version = "0.7.0", features = ["atmega328p", "rt"]}

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"
debug = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
